Don't crash if the currentIndex is set while creating a delegate.

Task-number: QTBUG-8456